--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <div class="periodical-schedule">
-            <div class="image-wrapper">
+        <div class="card-wrapper">
+            <div class="image-container">
                     
             </div>
             <div class="summary">Order Summary</div>
@@ -16,12 +16,11 @@
                 and podcast on any device anywhere
                 you like!
             </div>
-
-            <div class="time">
+            <div class="schedule">
                 <div class="icon">
                     <i class="fa fa-music checked"></i>
                 </div>
-                    <div class="date">
+                    <div class="period">
                         Annual Plan
                             <br><span>$59.99/year</span>
                 </div>
